--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                 }
             }
         }
-        stage('Complete') {
+        stage('Completee') {
             steps {
                 echo 'Job Complite!'
            }
