--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         docker {
-            image 'node:20.11.0-alpine3.19' 
+            image 'node:19-bullseye' 
             args '-p 3000:3000' 
         }
     }
