add docker info step

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -6,6 +6,14 @@ pipeline {
         }
     }
     stages {
+        stage('Test Docker') {
+            steps {
+                script {
+                    sh 'docker info'
+                    sh 'docker network ls'
+                }
+            }
+        }
         stage('Build') { 
             steps {
                 dir('frontend') {
